fix tutor search and apply pagination
